# text-to-sql

./: .env  Dockerfile  Dockerfile.mcp  README.md  compose.yml  pyproject.toml
diagrams/: overview.txt
docs/: claude-interaction-examples.md  test-instructions.md
scripts/init-db/: 01-create-test-tables.sql  02-dummy-data.sql
src/: main.py
src/postgres_mcp_server/: main.py
src/text_to_sql/api/: app.py
src/text_to_sql/api/models/: api_models.py
src/text_to_sql/api/routes/: query.py
src/text_to_sql/core/: config.py
src/text_to_sql/db/: cache.py  connection.py  schema.py
src/text_to_sql/mcp/: client.py  models.py  prompts.py
src/text_to_sql/sql/: generator.py
tests/: postgresql_mcp_integration_test.py
