[project]
name = "text-to-sql"
version = "0.1.0"
description = "A flexible text-to-SQL conversion system using LLMs"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
    { name = "Jainish Savalia", email = "jainishsavalia@gmail.com" }
]

dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.115.11",
    "httpx>=0.28.1",
    "mcp[cli]>=1.3.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.38",
    "sqlglot>=26.9.0",
    "sqlparse>=0.5.3",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "ruff>=0.9.10",
]

[tool.ruff]
line-length = 130
lint.select = ["E", "F", "I"]
lint.ignore = [
    "F841", "E402",
]
fix = true

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true
